<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="otherMachineState" Id="{fca6f4e4-5ae4-444c-9ed7-235dd6d71b99}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM otherMachineState
VAR_INPUT
	lightShow:BOOL;
END_VAR
VAR
	inChamberState:UDINT;
	outChamberState:UDINT;
	etchState:UDINT;
	t1:TON;
	rTrig:R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Chamber State
// Wafer In Chamber State
IF gCtrlMode=ControlMode.eManualCtrMode THEN
	CASE inChamberState OF
		0:
			// 无 Wafer 状态
			IF gWaferMemoryState=0 THEN
				inChamberState:=inChamberState+10;
			END_IF
		10:
			// 实时检测放入晶圆
			IF gICP.I_WaferCheck AND gICP.I_ARMHome THEN
				inChamberState:=inChamberState+10;
			ELSE
				inChamberState:=0;
			END_IF
		20:
			IF gICP.GateDoorExtSensor THEN
				inChamberState:=inChamberState+10;
			ELSE
				inChamberState:=0;
			END_IF
		30:
			IF NOT gICP.I_ARMHome THEN
				inChamberState:=inChamberState+10;
			ELSE
				inChamberState:=20;
			END_IF
		40:
			IF gARMPosition=gICP.ARM.actpos THEN
				inChamberState:=inChamberState+10;
			ELSE
				inChamberState:=20;
			END_IF
		50:
			IF gICP.LiftPinExtSensor THEN// 顶起
				inChamberState:=100;
				gWaferMemoryState:=1;
				ups_CX51X0.Act_Wrtie();
			ELSE
				inChamberState:=200;// 不顶起
				gWaferMemoryState:=0;
				ups_CX51X0.Act_Wrtie();
			END_IF
		100:
			IF ABS( gARMPosition-gICP.ARM.actpos)>1 THEN// 手臂回原
				inChamberState:=inChamberState+10;
			ELSE
				inChamberState:=50;// 手臂静止
			END_IF
		110:
			IF gICP.I_ARMHome THEN
				inChamberState:=0;
			END_IF
			IF gARMPosition=gICP.ARM.actpos THEN
				inChamberState:=40;
			END_IF
		200:
			IF ABS( gARMPosition-gICP.ARM.actpos)>1 THEN// 手臂回原
				inChamberState:=inChamberState+10;
			ELSE
				inChamberState:=50;// 手臂静止
			END_IF
		210:
			IF gICP.I_ARMHome THEN
				inChamberState:=0;
			END_IF
			IF gARMPosition=gICP.ARM.actpos THEN
				inChamberState:=40;
			END_IF
	END_CASE
	
	CASE outChamberState OF
		0:
			// 有 Wafer 状态
			IF gWaferMemoryState=1 THEN
				outChamberState:=outChamberState+10;
			END_IF
		10:
			IF gICP.GateDoorExtSensor AND gARMPosition=gICP.ARM.actpos THEN
				outChamberState:=outChamberState+10;
			ELSE
				outChamberState:=0;
			END_IF
		20:
			IF gICP.LiftPinExtSensor THEN
				outChamberState:=outChamberState+10;
			END_IF
		30:
			IF gICP.LiftPinRetSensor THEN
				gWaferMemoryState:=0;
				ups_CX51X0.Act_Wrtie();
				outChamberState:=outChamberState+10;
			ELSE
				IF ABS( gARMPosition-gICP.ARM.actpos)>1 THEN
					outChamberState:=0;
				END_IF
			END_IF	
		40:
			IF gICP.I_ARMHome THEN
				outChamberState:=0;
			END_IF
			IF gICP.LiftPinExtSensor THEN
				gWaferMemoryState:=1;
				ups_CX51X0.Act_Wrtie();
				outChamberState:=20;
			END_IF
	END_CASE
END_IF
t1(IN:=gWaferMemoryState=1 AND NOT t1.Q,PT:=T#0.5S);
IF t1.Q THEN
	lightShow:=NOT lightShow;
END_IF
IF gWaferMemoryState=0 THEN
	lightShow:=FALSE;
END_IF

IF S_ActuatorRecoveryPOU.busy OR MainPOU.busy OR S_ChamberLLVent.busy OR S_Etching.busy OR S_LoadLockPumping.busy OR S_LoadLockVent.busy OR
	S_LoadWafer.busy OR S_MachinePumping.busy OR S_MachineVent.busy OR S_RoughPumping.busy OR S_UnLoadWafer.busy OR S_WaferCheckPOU.busy OR
	S_PDVSafeCtr.busy THEN
	gSPOUBusy:=TRUE;
ELSE
	gSPOUBusy:=FALSE;
	gShowPOURunLog:=FALSE;
END_IF
gRunningLog.clearShowInfo:=FALSE;
rTrig(CLK:=gSPOUBusy);
IF rTrig.Q THEN
	gRunningLog.clearShowInfo:=TRUE;
	gShowPOURunLog:=TRUE;
END_IF
IF NOT gSPOUBusy THEN
	IF gICP.TBGauge.outputValue<400 THEN
		gRoughRemainTMPCanOpen:=TRUE;
	ELSE
		gRoughRemainTMPCanOpen:=FALSE;
	END_IF
ELSE
	IF gICP.TBGauge.outputValue>400 THEN
		gRoughRemainTMPCanOpen:=FALSE;
	END_IF
END_IF

IF ABS(gICP.MFC1.setFlow-gICP.MFC1.actflow)>gMFCMonitParLimit OR  ABS(gICP.MFC2.setFlow-gICP.MFC2.actflow)>gMFCMonitParLimit OR  ABS(gICP.MFC3.setFlow-gICP.MFC3.actflow)>gMFCMonitParLimit 
	OR  ABS(gICP.MFC4.setFlow-gICP.MFC4.actflow)>gMFCMonitParLimit OR  ABS(gICP.MFC5.setFlow-gICP.MFC5.actflow)>gMFCMonitParLimit OR  ABS(gICP.MFC6.setFlow-gICP.MFC6.actflow)>gMFCMonitParLimit 
	OR  ABS(gICP.MFC7.setFlow-gICP.MFC7.actflow)>gMFCMonitParLimit OR  ABS(gICP.MFC8.setFlow-gICP.MFC8.actflow)>gMFCMonitParLimit OR  ABS(gICP.MFC9.setFlow-gICP.MFC9.actflow)>gMFCMonitParLimit  THEN
	gICP.S_MFCMonitFlowNotZero:=TRUE;
ELSE
	gICP.S_MFCMonitFlowNotZero:=FALSE;
END_IF]]></ST>
    </Implementation>
    <Method Name="RecipeInputCheck" Id="{9fd3f976-ea6b-456c-9f7f-de0e99b12e4d}">
      <Declaration><![CDATA[METHOD RecipeInputCheck : BOOL
VAR_INPUT
	numMax:INT;
END_VAR
VAR
	start:INT:=1;
	i:INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR start:=1 TO numMax DO
	IF len(gRecipeViewData[start].mfc1)>0 THEN
		FOR i:=0 TO LEN(gRecipeViewData[start].mfc1)-1 DO
			gLog.append(BYTE_TO_STRING(gRecipeViewData[start].mfc1[i]));
		END_FOR
	END_IF
END_FOR]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="otherMachineState">
      <LineId Id="45" Count="3" />
      <LineId Id="57" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="62" Count="2" />
      <LineId Id="59" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="65" Count="1" />
      <LineId Id="68" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="72" Count="1" />
      <LineId Id="75" Count="1" />
      <LineId Id="74" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="82" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="86" Count="1" />
      <LineId Id="84" Count="1" />
      <LineId Id="88" Count="0" />
      <LineId Id="90" Count="1" />
      <LineId Id="115" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="92" Count="1" />
      <LineId Id="116" Count="0" />
      <LineId Id="246" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="106" Count="3" />
      <LineId Id="105" Count="0" />
      <LineId Id="111" Count="3" />
      <LineId Id="122" Count="2" />
      <LineId Id="94" Count="0" />
      <LineId Id="100" Count="3" />
      <LineId Id="95" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="119" Count="1" />
      <LineId Id="118" Count="0" />
      <LineId Id="126" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="130" Count="5" />
      <LineId Id="195" Count="2" />
      <LineId Id="199" Count="1" />
      <LineId Id="198" Count="0" />
      <LineId Id="201" Count="3" />
      <LineId Id="207" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="210" Count="0" />
      <LineId Id="215" Count="3" />
      <LineId Id="212" Count="0" />
      <LineId Id="230" Count="5" />
      <LineId Id="248" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="236" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="221" Count="0" />
      <LineId Id="225" Count="4" />
      <LineId Id="239" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="242" Count="2" />
      <LineId Id="265" Count="0" />
      <LineId Id="241" Count="0" />
      <LineId Id="267" Count="0" />
      <LineId Id="261" Count="1" />
      <LineId Id="266" Count="0" />
      <LineId Id="263" Count="1" />
      <LineId Id="322" Count="0" />
      <LineId Id="325" Count="3" />
      <LineId Id="323" Count="0" />
      <LineId Id="329" Count="0" />
      <LineId Id="331" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="324" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="292" Count="5" />
      <LineId Id="282" Count="0" />
    </LineIds>
    <LineIds Name="otherMachineState.RecipeInputCheck">
      <LineId Id="12" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>